apps/healthmap-pollutionmap/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollutionmap-backend
  namespace: pollutionmap
  labels:
    app: pollutionmap-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pollutionmap-backend
  template:
    metadata:
      labels:
        app: pollutionmap-backend
    spec:
      containers:
        - name: pollutionmap-backend
          image: ghcr.io/curatimexai/nightingale-pollutionmap-backend:6a0e9a7587ddf3d99e80669ead982f96760c16e3
          ports:
            - containerPort: 3000
