apps/healthmap-pollutionmap/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollutionmap-frontend
  namespace: pollutionmap
  labels:
    app: pollutionmap-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pollutionmap-frontend
  template:
    metadata:
      labels:
        app: pollutionmap-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: pollutionmap-frontend
          image: ghcr.io/curatimexai/nightingale-pollutionmap-frontend:60627b7fadc44cda89720d2b96ff9d17e58388a7
          ports:
            - containerPort: 80
