apps/healthmap-pollutionmap/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pollutionmap-service-backend
  namespace: pollutionmap
spec:
  selector:
    app: pollutionmap-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
