apps/healthmap-pollutionmap/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
 name: pollutionmap-service-frontend
 namespace: pollutionmap
spec:
  selector: 
    app: pollutionmap-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
